--- a/Ansible/activity2.yml
+++ b/Ansible/activity2.yml
@@ -1,13 +1,13 @@
 ---
-- hosts: all
-  become: yes
+- hosts: local
+  become: true
   tasks:
     - name: Update all the packages
-      dnf:
+      apt:
         name: '*'
         state: latest
     - name: Install required packages
-      dnf:
+      apt:
         name:
           - nginx
           - firewalld
